--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,10 @@
-REACT_APP_CHAIN_ID = "122"
+REACT_APP_CHAIN_ID = "56"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://rpc.fuse.io"
+REACT_APP_NODE_1 = "https://bsc-dataseed.binance.org"
+
+# 10+ nodes balanced, US/EU
+REACT_APP_NODE_2 = "https://bsc-dataseed.binance.org"
+
+# 10+ nodes balanced in each region, global
+REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
